--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
     "text": "Pranav Vaid"
   },
   "text": {
-    "more": "v1 test of cardinal map thing, just to see if this works",
-    "intro": "This app shows how all courses at Stanford are related to each other!",
+    "more": "This app shows how all courses at Stanford are related to each other! Each node represents a course, and the edges leading away from it show which other courses it is a prerequisite for.",
+    "intro": "This app shows how all courses at Stanford are related to each other! Each node represents a course, and the edges leading away from it show which other courses it is a prerequisite for.",
     "title": "Stanford Cardinal Direction"
   },
   "legend": {
@@ -24,7 +24,7 @@
   },
   "informationPanel": {
     "groupByEdgeDirection": true,
-    "imageAttribute": "Label"
+    "imageAttribute": false
   },
   "sigma": {
     "drawingProperties": {
