reexported grom gephi

--- a/config.json
+++ b/config.json
@@ -8,12 +8,8 @@
     "text": "Pranav Vaid"
   },
   "text": {
-    "more": "Click on a node to display the courses that it leads to. This app shows how all courses at Stanford are related to each other! Each node represents a course, and the edges leading away from it show which other courses it is a prerequisite for. Template provided by InteractiveVis project
-http://blogs.oii.ox.ac.uk/vis/
-https://github.com/oxfordinternetinstitute/InteractiveVis/",
-    "intro": "Click on a node to display the courses that it leads to. This app shows how all courses at Stanford are related to each other! Each node represents a course, and the edges leading away from it show which other courses it is a prerequisite for. Template provided by InteractiveVis project
-http://blogs.oii.ox.ac.uk/vis/
-https://github.com/oxfordinternetinstitute/InteractiveVis/",
+    "more": "This app shows how all courses at Stanford are related to each other! Each node represents a course, and the edges leading away from it show which other courses it is a prerequisite for.",
+    "intro": "This app shows how all courses at Stanford are related to each other! Each node represents a course, and the edges leading away from it show which other courses it is a prerequisite for.",
     "title": "Stanford Cardinal Direction"
   },
   "legend": {
@@ -44,10 +40,10 @@ https://github.com/oxfordinternetinstitute/InteractiveVis/",
       "defaultLabelSize": 14
     },
     "graphProperties": {
-      "maxEdgeSize": 1.5,
-      "minEdgeSize": 1.0,
+      "maxEdgeSize": 0.5,
+      "minEdgeSize": 0.2,
       "minNodeSize": 1,
-      "maxNodeSize": 13
+      "maxNodeSize": 7
     },
     "mouseProperties": {
       "maxRatio": 20,
